# real_master_degree

./: .travis.yml  CMakeLists.txt
cuda_src/: CMakeLists.txt  main.cu
cuda_src/matrix/: Matrix.cu  Matrix.cuh  Matrix.hpp
cuda_src/matrix_utils/: operations.cpp  operations.cu  operations.cuh  operations.hpp  svd.cpp  svd.cu  svd.cuh
src/: main.cpp
src/matrix/: Matrix.h
src/matrix_utils/: operations.cpp  operations.h  svd.cpp  svd.h
tests/: CMakeLists.txt
tests/lib/googletest-release-1.8.1/googlemock/: CMakeLists.txt
tests/lib/googletest-release-1.8.1/googletest/cmake/: internal_utils.cmake
tests/src/: omp_tests.cpp  qr.cpp  simple_test.cpp  svd.cpp
